--- a/online-poradna/src/components/question-list-item.module.css
+++ b/online-poradna/src/components/question-list-item.module.css
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    padding: 1rem;
+    padding: .5rem;
     border: 1px solid var(--blue-light);
     margin-bottom: 1rem;
     margin-left: 0;
@@ -37,7 +37,7 @@
 }
 
 .info .button {
-    font-size: 1.05rem;
+    font-size: 1rem;
     width: 60%;
     margin: 0 auto;
     padding: 0.5rem 2rem;
@@ -51,11 +51,16 @@
 .category {
     text-transform: uppercase;
     color: var(--blue-light);
+    text-align: left;
 }
 
-.category span:not(:first-child) {
-    margin-right: .5rem;
+.category span {
+    font-size: .9rem !important;
 }
+
+/*.category span:not(:first-child) {
+    margin-left: .5rem;
+}*/
 
 .date {
     color: var(--gray);
@@ -69,6 +74,7 @@
     .listItem {
         width: 50rem;
         margin: 0 auto 1rem auto;
+        padding: 1rem;
     }
 
     .info .button {
